add the method for reset-password and her swager documentation
